Second commit, code validated now

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <!--  ||||     ABOUT    ||||  -->
-        <div id="about" width="400" height="260">
+        <div id="about">
             <div class="area_title">About...</div>
             <div>
                 <p class="about_text">Hello! I'm an extremely driven and creative Full Stack Developer who is currently open for career opportunities as a front-end or back-end developer in the Greater Seattle Area.</p>
@@ -40,14 +40,14 @@
                 </div>
                 <div class="technologies_area">
                     <div class="technologies_logos">
-                        <img src="portfolio_images/php.png">
-                        <img src="portfolio_images/codeigniter.png">
-                        <img src="portfolio_images/jquery.png">
-                        <img src="portfolio_images/ajax.png">
-                        <img src="portfolio_images/mysql.png">
-                        <img src="portfolio_images/html.png">
-                        <img src="portfolio_images/css.png">
-                        <img src="portfolio_images/bootstrap.png">
+                        <img src="portfolio_images/php.png" alt="PHP-logo">
+                        <img src="portfolio_images/codeigniter.png" alt="codeigniter-logo">
+                        <img src="portfolio_images/jquery.png" alt="jquery-logo">
+                        <img src="portfolio_images/ajax.png" alt="ajax-logo">
+                        <img src="portfolio_images/mysql.png" alt="mysql-logo">
+                        <img src="portfolio_images/html.png" alt="html-logo">
+                        <img src="portfolio_images/css.png" alt="css-logo">
+                        <img src="portfolio_images/bootstrap.png" alt="bootstrap-logo">
                     </div>
                     <div class="column_button">La Mode
                         </div>
@@ -67,14 +67,14 @@
                     </div>
                     <div class="technologies_area">
                         <div class="technologies_logos">
-                            <img src="portfolio_images/javascript.png">
-                            <img src="portfolio_images/mongodb.png">
-                            <img src="portfolio_images/expressjs.png">
-                            <img src="portfolio_images/angular.png">
-                            <img src="portfolio_images/nodejs.png">
-                            <img src="portfolio_images/html.png">
-                            <img src="portfolio_images/css.png">
-                            <img src="portfolio_images/socket.png">
+                            <img src="portfolio_images/javascript.png" alt="javascript-logo">
+                            <img src="portfolio_images/mongodb.png" alt="mongodb-logo">
+                            <img src="portfolio_images/expressjs.png" alt="expressjs-logo">
+                            <img src="portfolio_images/angular.png" alt="angular-logo">
+                            <img src="portfolio_images/nodejs.png" alt="nodejs-logo">
+                            <img src="portfolio_images/html.png" alt="html-logo">
+                            <img src="portfolio_images/css.png" alt="css-logo">
+                            <img src="portfolio_images/socket.png" alt="socket-logo">
                         </div>
                         <div class="column_button">Family Contacts
                             </div>
@@ -93,15 +93,15 @@
                         </div>
                         <div class="technologies_area">
                             <div class="technologies_logos">
-                                <img src="portfolio_images/python.png">
-                                <img src="portfolio_images/django.png">
-                                <img src="portfolio_images/d3.png">
-                                <img src="portfolio_images/angular.png">
-                                <img src="portfolio_images/sqlite.png">
-                                <img src="portfolio_images/html.png">
-                                <img src="portfolio_images/css.png">
-                                <img src="portfolio_images/javascript.png">
-                                <img src="portfolio_images/materialize.png">
+                                <img src="portfolio_images/python.png" alt="python-logo">
+                                <img src="portfolio_images/django.png" alt="django-logo">
+                                <img src="portfolio_images/d3.png" alt="d3-logo">
+                                <img src="portfolio_images/angular.png" alt="angular-logo">
+                                <img src="portfolio_images/sqlite.png" alt="sqlite-logo">
+                                <img src="portfolio_images/html.png" alt="html-logo">
+                                <img src="portfolio_images/css.png" alt="css-logo">
+                                <img src="portfolio_images/javascript.png" alt="javascript-logo">
+                                <img src="portfolio_images/materialize.png" alt="materialize-logo">
                             </div>
                             <div class="column_button">fiveEleven
                                 </div>
@@ -112,9 +112,9 @@
             </div>
             <div id="footer">
                 <p>jdoe@gmails.com  | 206-555-1212</p>
-                <p><img src="portfolio_images/github.png"><a href=#>jaynedev </a> 
-                    <img src="portfolio_images/linkedin.png"><a href=#>jayne-doe </a> <img src="portfolio_images/twitter.png"><a href=#>jdtweets </a>
-                    <img src="portfolio_images/codepen.png"><a href=#>jaynedev</a></p>
+                <p><img src="portfolio_images/github.png" alt="github-logo"><a href=#>jaynedev </a> 
+                    <img src="portfolio_images/linkedin.png" alt="linkedin-logo"><a href=#>jayne-doe </a> <img src="portfolio_images/twitter.png" alt="twitter-logo"><a href=#>jdtweets </a>
+                    <img src="portfolio_images/codepen.png" alt="codepen-logo"><a href=#>jaynedev</a></p>
                 </div>
 
 
